force-app/main/default/objects/Survey__c/fields/PS_PM_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>PS_PM_Manager_Email__c</fullName>
    <label>PS PM Manager Email</label>
    <type>Email</type>
</CustomField>