force-app/main/default/objects/Survey__c/fields/PS_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>PS_Submitter_Email__c</fullName>
    <label>PS Submitter Email</label>
    <type>Email</type>
</CustomField>