force-app/main/default/objects/Survey__c/fields/PS_Timely_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>PS_Timely_Follow_Up__c</fullName>
    <description>When follow up was necessary, the Professional Services consultant did so in a timely manner.</description>
    <inlineHelpText>When follow up was necessary, the Professional Services consultant did so in a timely manner.</inlineHelpText>
    <label>PS Timely Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Somewhat Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Somewhat Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>