force-app/main/default/objects/Survey__c/fields/PS_Timely_Follow_Up_num__c.field-meta.xml
<CustomField>
    <fullName>PS_Timely_Follow_Up_num__c</fullName>
    <formula>CASE (TEXT(PS_Timely_Follow_Up__c), 
&quot;1 - Strongly Disagree&quot;, 1, 
&quot;2 - Somewhat Disagree&quot;, 2, 
&quot;3 - Neither Agree nor Disagree&quot;, 3, 
&quot;4 - Somewhat Agree&quot;, 4, 
&quot;5 - Strongly Agree&quot;, 5, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS_Timely_Follow_Up #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>