force-app/main/default/objects/Survey__c/fields/PS_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>PS_Total_Score__c</fullName>
    <formula>(PS_Courteous_and_Professional_num__c + PS_Had_Product_Knowledge_num__c + PS_Identified_Goals_and_Objectives_num__c + PS_Overall_Satisfied_num__c + PS_Timely_Follow_Up_num__c)
/
(IF(PS_Courteous_and_Professional_num__c = 0, 0, 1) + IF(PS_Had_Product_Knowledge_num__c = 0, 0, 1) + IF(PS_Identified_Goals_and_Objectives_num__c = 0, 0, 1) + IF(PS_Overall_Satisfied_num__c = 0, 0, 1) + IF(PS_Timely_Follow_Up_num__c = 0, 0, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>