force-app/main/default/objects/Survey__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <label>Question 10</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>