force-app/main/default/objects/Survey__c/fields/Question_11__c.field-meta.xml
<CustomField>
    <fullName>Question_11__c</fullName>
    <label>Question 11</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>