force-app/main/default/objects/Survey__c/fields/Real_time_preventative_fault_mon_CAP__c.field-meta.xml
<CustomField>
    <fullName>Real_time_preventative_fault_mon_CAP__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>Real-time, preventative fault monitoring</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 – Not Interested</fullName>
            </value>
            <value>
                <fullName>2 – A Little Interested</fullName>
            </value>
            <value>
                <fullName>3 – Somewhat Interested</fullName>
            </value>
            <value>
                <fullName>4 – Interested</fullName>
            </value>
            <value>
                <fullName>5 – Very Interested</fullName>
            </value>
            <value>
                <fullName>6 – Currently Using</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>