force-app/main/default/objects/Survey__c/fields/Reason_for_dissatisfaction__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_dissatisfaction__c</fullName>
    <label>Reason for dissatisfaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>