force-app/main/default/objects/Survey__c/fields/Reporting_BI_Solution__c.field-meta.xml
<CustomField>
    <fullName>Reporting_BI_Solution__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>Reporting/BI Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Syntelic</fullName>
            </value>
            <value>
                <fullName>Propel IT</fullName>
            </value>
            <value>
                <fullName>Cognos</fullName>
            </value>
            <value>
                <fullName>Transportation Management System</fullName>
            </value>
            <value>
                <fullName>None / In-house, Custom</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>