force-app/main/default/objects/Survey__c/fields/Request_to_speak_to_Product_Support__c.field-meta.xml
<CustomField>
    <fullName>Request_to_speak_to_Product_Support__c</fullName>
    <formula>IF(
INCLUDES(Additional_Request__c, &quot;I have additional feedback and would lik&quot;), TRUE, 
 IF(INCLUDES(Additional_Request__c, &quot;Tengo retroalimentación adicional y me g&quot;), TRUE, FALSE))</formula>
    <label>Request to speak to Product Support</label>
    <type>Checkbox</type>
</CustomField>