force-app/main/default/objects/Survey__c/fields/Routing_Scheduling_Solution__c.field-meta.xml
<CustomField>
    <fullName>Routing_Scheduling_Solution__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>Routing/Scheduling Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appian / TMW Systems</fullName>
            </value>
            <value>
                <fullName>Manhattan Associates</fullName>
            </value>
            <value>
                <fullName>Paragon Software Systems</fullName>
            </value>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>None / In-house, Custom</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>