force-app/main/default/objects/Survey__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <label>Survey Response</label>
    <type>Url</type>
</CustomField>