force-app/main/default/objects/Survey__c/fields/TMS_Solution__c.field-meta.xml
<CustomField>
    <fullName>TMS_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMS Solution</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Surveys (TMS Solution)</relationshipLabel>
    <relationshipName>Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>