force-app/main/default/objects/Survey__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <description>Total Survey Score not including any response that is not applicable.</description>
    <formula>(Quality_of_service_provided_num__c + Timeliness_of_service_provided_num__c + Overall_Service_Experience_num__c + Courtesy_Professionalism_of_Analyst_num__c + Analyst_s_Technical_Skills_Knowledge_num__c)
/
(IF(Quality_of_service_provided_num__c = 0, 0, 1) + IF(Timeliness_of_service_provided_num__c = 0, 0, 1) + IF(Overall_Service_Experience_num__c = 0, 0, 1) + IF(Courtesy_Professionalism_of_Analyst_num__c = 0, 0, 1) + IF(Analyst_s_Technical_Skills_Knowledge_num__c = 0, 0, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>