force-app/main/default/objects/Survey__c/fields/Vehicles_in_Fleet_CAP__c.field-meta.xml
<CustomField>
    <fullName>Vehicles_in_Fleet_CAP__c</fullName>
    <description>Used for CAP data collection.</description>
    <label># Vehicles in Fleet (CAP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>