force-app/main/default/objects/Survey__c/fields/Willing_to_be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_be_Contacted__c</fullName>
    <label>Willing to be Contacted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#0B6FCE</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#66E9BD</color>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>