force-app/main/default/objects/Survey__c/listViews/Closed_Opportunity_Surveys.listView-meta.xml
<ListView>
    <fullName>Closed_Opportunity_Surveys</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact_survey_lookup__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity_ID__c</columns>
    <columns>Survey_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Question_1__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>Sales</value>
    </filters>
    <label>Closed Opportunity Surveys</label>
    <language>en_US</language>
    <sharedTo>
        <role>Product_Manager</role>
    </sharedTo>
</ListView>