force-app/main/default/objects/Survey__c/listViews/Surveys_with_Projects.listView-meta.xml
<ListView>
    <fullName>Surveys_with_Projects</fullName>
    <columns>NAME</columns>
    <columns>Survey_Type__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Account__c</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>PS_Total_Score__c</columns>
    <columns>Project_pse__c</columns>
    <filterScope>Everything</filterScope>
    <label>Survey Results</label>
    <language>en_US</language>
</ListView>